Add more model tests
Added/improved baseline tests for:
 - platform-api-client
 - kms-client
 - avro-decoder
 - bib-handler

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 cache:
 - bundler
 script:
-- bundle exec rspec
+- APP_ENV=test bundle exec rspec
 deploy:
 - provider: lambda
   function_name: SyncItemMetadataToScsbListener-development
