Add check for changing bnums to trigger transfer
When processing item updates, check scsb bnum ("owningInstitutionBibId")
to determine if SCSB bnum is different from that in local sierra item
record. If difference found, process update as a "transfer" by setting
`action` to "transfer" and passing `bib_record_number` in the POST to
the sync-item-metadata endpoint.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
 cache:
 - bundler
 script:
-- APP_ENV=test bundle exec rspec -f d
+- LOG_LEVEL=error APP_ENV=test bundle exec rspec -f d
 deploy:
 - provider: lambda
   function_name: SyncItemMetadataToScsbListener-development
