Fix: quietly fail deleted item

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ deploy:
   - NYPL_OAUTH_SECRET=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAIcwgYQGCSqGSIb3DQEHBqB3MHUCAQAwcAYJKoZIhvcNAQcBMB4GCWCGSAFlAwQBLjARBAx8ZuLftGsgDmOxxBICARCAQ3ZSNw6hWlqI73kLJcs8Zg3O13PKiATfXXDUvGFim/KolFmQDCsVp7JFF9Jg01U++KNtcGJiVev7z3OAPNXc3fqGp6k=
   - SCSB_API_BASE_URL=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAIAwfgYJKoZIhvcNAQcGoHEwbwIBADBqBgkqhkiG9w0BBwEwHgYJYIZIAWUDBAEuMBEEDC76YFNmHCel71yszwIBEIA9rRyZEpeLBxMs8wjvsVRuWXU2RoEvtYbg4GkbaRMK5c6DOKPReBD6ehzyxLQriwMBa5U30qXRDaKmSR7OIw==
   - SCSB_API_KEY=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAGMwYQYJKoZIhvcNAQcGoFQwUgIBADBNBgkqhkiG9w0BBwEwHgYJYIZIAWUDBAEuMBEEDBGj6VVDSTYYcLzAdgIBEIAgOtoxPpUgkHHgc3eipZzyfMEUwYHIt7VvXy9Y5GRkVik=
+  - LOG_LEVEL=debug
   skip_cleanup: true
   access_key_id: "$AWS_ACCESS_KEY_ID_DEVELOPMENT"
   secret_access_key: "$AWS_SECRET_ACCESS_KEY_DEVELOPMENT"
@@ -47,6 +48,7 @@ deploy:
   - SCSB_API_BASE_URL=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAIAwfgYJKoZIhvcNAQcGoHEwbwIBADBqBgkqhkiG9w0BBwEwHgYJYIZIAWUDBAEuMBEEDC76YFNmHCel71yszwIBEIA9rRyZEpeLBxMs8wjvsVRuWXU2RoEvtYbg4GkbaRMK5c6DOKPReBD6ehzyxLQriwMBa5U30qXRDaKmSR7OIw==
   - SCSB_API_KEY=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAGMwYQYJKoZIhvcNAQcGoFQwUgIBADBNBgkqhkiG9w0BBwEwHgYJYIZIAWUDBAEuMBEEDBGj6VVDSTYYcLzAdgIBEIAgOtoxPpUgkHHgc3eipZzyfMEUwYHIt7VvXy9Y5GRkVik=
   - NOTIFICATION_EMAIL=AQECAHh7ea2tyZ6phZgT4B9BDKwguhlFtRC6hgt+7HbmeFsrsgAAAHMwcQYJKoZIhvcNAQcGoGQwYgIBADBdBgkqhkiG9w0BBwEwHgYJYIZIAWUDBAEuMBEEDIJI11++bttShr1irwIBEIAwF0xNvg3mkAIna3pOEPhnm7+2wVqnvhWHk9BN1ImBbfW9kPcqUVImyKfGl2w25KjB
+  - LOG_LEVEL=debug
   skip_cleanup: true
   access_key_id: "$AWS_ACCESS_KEY_ID_QA"
   secret_access_key: "$AWS_SECRET_ACCESS_KEY_QA"
