--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 - gem update --system
 - gem install bundler
 install:
+- bundle update --bundler
 - bundle install
 cache:
 - bundler
