--- a/.bundle/config
+++ b/.bundle/config
@@ -1,3 +1,5 @@
 ---
-BUNDLE_FROZEN: "true"
+BUNDLE_DISABLE_SHARED_GEMS: "1"
+BUNDLE_FROZEN: "false"
 BUNDLE_PATH: "vendor/bundle"
+BUNDLE_DEPLOYMENT: "true"
